emp-app-kube-local-ingress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: emp-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: emp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: db
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: emp-app
spec:
  ports:
  - port: 3306
  selector:
    app: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: emp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: backend
        image: andyvan27/emp-app-backend:v1.0.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: emp-app
spec:
  ports:
  - port: 8080
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: emp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: frontend
        image: andyvan27/emp-app-frontend:v1.0.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: emp-app
spec:
  ports:
  - port: 80
  selector:
    app: frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emp-ingress
  namespace: emp-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: employee.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /employee
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
